src/objects/Google_API_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>API_KEY__c</fullName>
        <label>API KEY</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token_Time_Stamp__c</fullName>
        <label>Access Token Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Email_ID__c</fullName>
        <label>Client Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Calender_ID__c</fullName>
        <label>Google Calender ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Appointment_Lag__c</fullName>
        <label>Secondary Appointment Lag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sync_Token__c</fullName>
        <label>Sync Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unallocated_Broker_Name__c</fullName>
        <label>Unallocated Broker Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upto_date__c</fullName>
        <label>Upto date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Upto_period__c</fullName>
        <label>Upto period (In weeks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Google API Setting</label>
</CustomObject>